--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
 
     <div class="buttons">
-        <img class= "image" id="image1" src="assests/images/bluegem.png">
-        <img class= "image" id="image2" src="assests/images/greengem.png">
-        <img class= "image" id="image3" src="assests/images/pinkgem.png">
-        <img class= "image" id="image4" src="assests/images/redgem.png">
+        <img class= "image" id="image1" src="assests/images/Blue Gem.png">
+        <img class= "image" id="image2" src="assests/images/Green Gem.png">
+        <img class= "image" id="image3" src="assests/images/Pink Gem.png">
+        <img class= "image" id="image4" src="assests/images/Red Gem.png">
     </div>
     
     <br>
@@ -47,12 +47,12 @@
     <br>
 
     <div class="row">
-        <div class="col-md-6 totalScore"> Total Score</div>
+        <div class="col-md-6 totalScore"> Total Score:</div>
     </div>
     <br>
 
     <div class="row">
-        <div class="col-md-6 scoreDisplay">Your Score</div>
+        <div class="col-md-6 scoreDisplay">Your Score:</div>
     </div>
     
 
